# ShoersShopAPI

./: .env.template  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 043ad2118bfa_add_product_size_brand_tables_add_.py  0ac24bf6e59f_add_brand_name_column_in_brand_table.py  134d5d945926_add_user_cart_favorite_order_review_.py  1da8ca77cfff_add_user_and_addresses_relationship.py  21efeb46aa8b_add_unique_constraint_from_favorite_.py  238c433bb9b3_fix_avg_grade_in_product_table.py  2aefbb6d98f3_change_logic_for_m_m_orders_carts_sizes_.py  43b1985f7ce2_fix_relationships_for_user_table.py  4c3b0ace63da_initial_revision.py  4e0f608d05bd_update_models.py  56c25c461aa7_enum_migration.py  578817de94fb_update_user_table.py  6b4669f5d750_update_forgein_key_cascade.py  750094f48e40_add_default_value_to_assoc_model.py  758af7b25926_base_init.py  760cd9c5ce50_enum_migration.py  7b46a1ee2eb3_fix_fucking_column_social_link_to_user_.py  85789fd537ab_add_column_article_in_product_table.py  88ceed845e04_add_address_table_add_relationships_.py  96caa6a6f339_change_column_logo_to_optional_in_.py  b406ba4b9e72_fix_column_social_link_to_user_table.py  c669a23acc85_update_color_enum.py  d02fc9ecdd53_add_m_m_relationships_between_cart_.py  d5d697b01beb_add_user_table.py  d88de3e2fb32_enum_migration.py  db723bd26a76_add_column_logo_in_product_table.py  ddfd1be9fe48_add_user_cart_favorite_order_review_.py  e9d179f8da4c_fix_name_for_association_columns.py  (+2 more)
certs.template/: jwt-private.pem  jwt-public.pem
test/: conftest.py  helpers.py
test/database/: conftest.py  (+15 more)
(+67 files in other folders)
