[project]
name = "shoersshopapi"
version = "0.1.0"
description = "Api for Ivan"
authors = [
    {name = "Ivan Yakovlev"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.0,<0.136.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
